@@ -468,6 +468,15 @@ begin
   else if MySystemfolder = CSIDL_COMMON_PROGRAMS then
     if not InstallDesktopFile(dfilename) then  LogDatei.log ('Could not uninstall desktop file', LLError)
     else result := true;
+  // try hard
+  dfilename := '/usr/share/applications/'+linkname+'.desktop';
+  LogDatei.log ('Try to delet desktop file: '+dfilename, LLDebug);
+  if not sysutils.DeleteFile(dfilename) then
+  begin
+    LogDatei.log ('Could not delete desktop file: '+dfilename, LLError);
+    result := false;
+  end
+  else result := true;
   (*
   if not FolderOpened
   then
